# End-To-End-ML-pipeline-for-profiling-insurance-customers

./: .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  codecov.yml  compose.yml  data_explore.ipynb  environment.yml  pyproject.toml  split_dataset_into_historic_and_new.py
.github/workflows/: ci_pipeline.yml  python-package-conda.yml
data/: README.md  create-table-template.sql  create_db_from_csv.sql
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: gold_tables.ipynb
policyML/: README.md  bronze.py  medallion_datawarehouse.sql  raw_dataset_preprocessing.py
policyML/bronze/: bronze.py  bronze_create_table.sql
policyML/gold/: gold.py  gold_create_table.sql
policyML/silver/: silver.py  silver_create_table.sql
src/: bronze_bulk_insert_data_from_csv.sql  bronze_create_table.sql  bronze_test.sql  medallion_datawarehouse.sql  split_dataset_into_historic_and_new.py
tests/: test_data.py
