[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "policyML"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "XRD Group" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "awscli",
    "loguru",
    "mkdocs",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["policyML"]
include = ["pyproject.toml", "policyML/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting
ignore = ["E501"] # Ignore line length

[tool.ruff.lint.isort]
known-first-party = ["policyML"]
force-sort-within-sections = true

